teach Python to pick a file, and give each dialog the desktop